--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>© 2025 VIKAS · Billing Executive | Accounts Professional</p>
-        <p style="margin-top: 10px;">📍 Rupnagar, Punjab, India | 📞 +91 84272-32693</p>
+        <p></p>
+        <p style="margin-top: 10px;"></p>
         <p style="margin-top: 15px; font-size: 0.9rem;">Built with professionalism and accuracy — just like my invoices ✅</p>
     </footer>
 </div>
