--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIKAS · Billing & Accounts Professional</title>
+    <title>Billing & Accounts Professional</title>
     <!-- Font Awesome 6 (free) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -404,9 +404,9 @@
                 <p class="hero-desc">Accurate, compliant, and detail-oriented professional with proven track record in transport and retail billing operations.</p>
                 
                 <div class="contact-info-hero">
-                    <div><i class="fas fa-phone-alt"></i> +91 84272-32693</div>
-                    <div><i class="fas fa-envelope"></i> vikas081415@gmail.com</div>
-                    <div><i class="fas fa-map-marker-alt"></i> Rupnagar, Punjab</div>
+                    <div><i class="fas fa-phone-alt"></i></div>
+                    <div><i class="fas fa-envelope"></i> </div>
+                    <div><i class="fas fa-map-marker-alt"></i> </div>
                 </div>
                 
                 <div style="display: flex; gap: 15px; flex-wrap: wrap; margin-top: 20px;">
@@ -495,7 +495,7 @@
                 <div class="year">2021</div>
             </div>
             <div class="edu-card">
-                <h4>Diploma in Computer Applications</h4>
+                <h4>Pro in Web programming </h4>
                 <div class="institute">Kirat Computer Center</div>
                 <div class="year">2022</div>
             </div>
